36-nacl/03-security-group.tf
resource "aws_security_group" "security_group_public_traffic" {
  name   = "security-group-for-public-traffic"
  vpc_id = aws_vpc.example_vpc.id
  tags   = { Name = "sg-for-public-traffic" }
}

resource "aws_vpc_security_group_egress_rule" "egress_internet_ipv4_rule" {
  security_group_id = aws_security_group.security_group_public_traffic.id
  cidr_ipv4         = "0.0.0.0/0" # where the traffic is going

  ip_protocol = "-1"
}

resource "aws_vpc_security_group_egress_rule" "egress_internet_ipv6_rule" {
  security_group_id = aws_security_group.security_group_public_traffic.id
  cidr_ipv6         = "::/0" # where the traffic is going

  ip_protocol = "-1"
}

# allow SSH into the instance
resource "aws_vpc_security_group_ingress_rule" "ingress_ssh_rule" {
  security_group_id = aws_security_group.security_group_public_traffic.id
  cidr_ipv4         = "0.0.0.0/0" # where the is traffic coming from

  from_port = 22
  to_port   = 22

  ip_protocol = "tcp"
}
